--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,36 @@
 plugins {
     id 'java'
 }
+
+repositories {
+    mavenCentral()
+}
+
+configurations {
+    xsl
+}
+
+dependencies {
+    // XSL conversion
+    implementation group: 'net.sf.saxon', name: 'Saxon-HE', version: '9.7.0-21'
+    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
+    implementation group: 'xom', name: 'xom', version: '1.3.2'
+//    implementation group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
+    implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.3'
+    
+    xsl group: 'net.sf.docbook', name: 'docbook-xsl', version: '1.79.1', classifier: 'resources', ext: 'zip'
+
+    testImplementation platform('org.junit:junit-bom:5.4.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
+}
+
+test {
+    useJUnitPlatform()
+}
+
+processResources {
+    from {
+        zipTree(configurations.xsl.singleFile)
+    }
+}
