--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,23 @@ dependencies {
     implementation group: 'xom', name: 'xom', version: '1.3.2'
 //    implementation group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
     implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.3'
-    
+
     xsl group: 'net.sf.docbook', name: 'docbook-xsl', version: '1.79.1', classifier: 'resources', ext: 'zip'
 
     testImplementation platform('org.junit:junit-bom:5.4.2')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.hamcrest:hamcrest:2.1'
+
+    testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testRuntimeOnly group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.26'
+
+}
+
+configurations {
+    implementation {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
 }
 
 test {
